Fix collapse with action_on_record

--- a/admin/template/css/src/less/theme/body.less
+++ b/admin/template/css/src/less/theme/body.less
@@ -1,3 +1,20 @@
 /*
  * Common rules for all pages
  */
+/* Ciblage spécifique du bouton de formulaire dans votre tableau */
+.action_on_record[aria-expanded="true"] .fa-plus:before {
+  content: "\f068"; /* Code Unicode FontAwesome pour le 'minus' (-) */
+}
+/* Transition pour que le changement soit moins brutal */
+.action_on_record .fa:before {
+  display: inline-block;
+  transition: transform 0.2s ease-in-out;
+}
+/*.action_on_record .fa-plus {
+  transition: transform 0.3s ease;
+}
+
+.action_on_record[aria-expanded="true"] .fa-plus {
+  transform: rotate(45deg);
+  color: #cc0000;
+}*/
